2017-08-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURLProtocol.m: Fixed error where the presence of a
	Location error was taken to indicate a redirect rather than looking
	at the HTTP status code for a 3xx value.

2017-08-04  Daniel Ferreira <dtf@stanford.edu>

	* Headers/Foundation/NSObjCRuntime.h:	
	Add empty definitions for OSX Availability macros for compatibility
	purposes.

2017-07-10  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/GSString.m (lengthUTF8):
	Characters outside the BMP cannot be converted to Latin 1 string
	encoding either.

	* Tests/base/NSString/pairs.m (main):
	* Tests/base/NSString/unichar_const.m:
	Add test cases.


2017-07-07 Riccardo Mottola <rm@gnu.org>

	* Source/NSProcessInfo.m:
	Fix GetTickCount()/GetTickCount64() for different Windows versions.

2017-07-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: When an object's retain count is incremented too
	far, track it so that we only raise an exception about it once (and
	make the exception message more informative so we can more easily
	tell what object has been leaked).

2017-06-29  Daniel Ferreira <dtf@stanford.edu>

	* Headers/Foundation/NSFileManager.h
	* Source/NSFileManager.m:
	Implement a method for getting attribytes of a file system path. Reuse
	the implementation of -fileSystemAttributesAtPath: for this purpose but
	export the last system errors to the caller. Make
	-fileSystemAttributesAtPath: use the new implementation, without
	exposing error info to the caller.

2017-06-29  Daniel Ferreira <dtf@stanford.edu>

	* Headers/Foundation/Foundation.h
	* Headers/Foundation/NSFileCoordinator.h
	* Headers/Foundation/NSFilePresenter.h
	* Headers/Foundation/NSFileVersion.h
	* Headers/Foundation/NSURLSession.h
	* Source/GNUmakefile
	* Source/NSFileCoordinator.m
	* Source/NSFileVersion.m
	* Source/NSURLSession.m:
	Generate class stubs (without any method definition) for
	NSFileCoordinator, NSFilePresenter, NSFileVersion and NSURLSession.
